# go-fastapi-test

./: Dockerfile  main.py  pyproject.toml  requirements.txt  textproc.py
src/fastapi_example/: __init__.py
