[project]
name = "fastapi-example"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_example"]

[tool.rye.scripts]
dev = "python -m uvicorn main:app --reload"